--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,134 @@
 /* You can add global styles to this file, and also import other style files */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote {
+  &:before, &:after {
+    content: '';
+    content: none; } }
+
+q {
+  &:before, &:after {
+    content: '';
+    content: none; } }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+.title {
+  font-size: 30px;
+  font-weight: bold;
+}
+
+body {
+  padding: 20px;
+  text-align: center;
+}
+
+.main {
+  max-width: 400px;
+  margin: 0 auto;
+}
+
+body {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+button {
+  margin-right: 10px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  table-layout: fixed;
+  font-size: 14px;
+}
+
+table, th, td {
+  border: 1px solid black;
+  padding: 5px;
+}
+
+caption {
+  margin-bottom: 20px;
+}
+
+.lds-ring {
+  display: flex;
+  visibility: hidden;
+  opacity: 0;
+  background: rgba(white, 0.8);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  transition: all 0.5s;
+
+  &--is-loading {
+    visibility: visible;
+    opacity: 1;
+
+    .lds-ring__element {
+      animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    }
+  }
+
+  &__element {
+    box-sizing: border-box;
+    position: absolute;
+    width: 51px;
+    height: 51px;
+    margin: 6px;
+    border: 6px solid black;
+    border-radius: 50%;
+    border-color: black transparent transparent transparent;
+
+    &:nth-child(1) {
+      animation-delay: -0.45s;
+    }
+    &:nth-child(2) {
+      animation-delay: -0.3s;
+    }
+    &:nth-child(3) {
+      animation-delay: -0.15s;
+    }
+  }
+}
+
+@keyframes lds-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
